solutions/inventory-quarkus/target/kubernetes/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: 7a4ae74f4f007d11fa1b7ff19bcc3e80030e827c
    app.quarkus.io/build-timestamp: 2024-03-26 - 13:16:56 +0000
  labels:
    app.kubernetes.io/name: inventory-quarkus
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
  name: inventory-quarkus
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: inventory-quarkus
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: 7a4ae74f4f007d11fa1b7ff19bcc3e80030e827c
    app.quarkus.io/build-timestamp: 2024-03-26 - 13:16:56 +0000
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/name: inventory-quarkus
  name: inventory-quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
      app.kubernetes.io/name: inventory-quarkus
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: 7a4ae74f4f007d11fa1b7ff19bcc3e80030e827c
        app.quarkus.io/build-timestamp: 2024-03-26 - 13:16:56 +0000
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
        app.kubernetes.io/name: inventory-quarkus
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: JAVA_APP_JAR
              value: /deployments/inventory-quarkus-1.0.0-SNAPSHOT-runner.jar
          image: image-registry.openshift-image-registry.svc:5000/kdubois/inventory-coolstore:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: inventory-quarkus
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
